[gd_scene load_steps=13 format=4 uid="uid://ceh6x0q1na8ol"]

[ext_resource type="Script" uid="uid://coqvl6gs01vka" path="res://scripts/main.gd" id="1_4846v"]
[ext_resource type="Texture2D" uid="uid://b4cpkn28td70x" path="res://art/New Piskel-1.png.png" id="1_gdddw"]
[ext_resource type="PackedScene" uid="uid://c4vnugo0nnjgr" path="res://scenes/player.tscn" id="2_32bk8"]
[ext_resource type="PackedScene" uid="uid://cns87or1848ep" path="res://scenes/enemy.tscn" id="3_feqwr"]
[ext_resource type="Texture2D" uid="uid://dkfx8jbpu7sts" path="res://art/New Piskel-1.png (2).png" id="4_r6is4"]
[ext_resource type="AudioStream" uid="uid://na4qchy2u711" path="res://audio/crushed-dreams-11536.mp3" id="6_wmnol"]
[ext_resource type="Script" uid="uid://cchk6vi4uxyut" path="res://scripts/enemy2.gd" id="7_lp0u0"]
[ext_resource type="Script" uid="uid://cfust3gp7x1fa" path="res://scripts/enemy3.gd" id="8_0d487"]
[ext_resource type="Texture2D" uid="uid://cpu0564r14sb2" path="res://art/cake.png" id="9_85g3d"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rvte2"]
texture = ExtResource("1_gdddw")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_yts8a"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rvte2")

[sub_resource type="CircleShape2D" id="CircleShape2D_qq21g"]
radius = 78.0577

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4846v")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AAAAACcAAAAAAAEAAAAAACgAAAAAAAEAAAABACcAAAABAAAAAAABACgAAAABAAEAAAACACcAAAAAAAAAAAACACgAAAAAAAEAAAADACcAAAABAAAAAAADACgAAAABAAEAAAAEACcAAAAAAAAAAAAEACgAAAAAAAEAAAAFACcAAAABAAAAAAAFACgAAAABAAEAAAAGACcAAAAAAAAAAAAGACgAAAAAAAEAAAAHACcAAAABAAAAAAAHACgAAAABAAEAAAAIACcAAAAAAAAAAAAIACgAAAAAAAEAAAAJACcAAAABAAAAAAAJACgAAAABAAEAAAAKACcAAAAAAAAAAAAKACgAAAAAAAEAAAALACcAAAABAAAAAAALACgAAAABAAEAAAAMACcAAAAAAAAAAAAMACgAAAAAAAEAAAANACcAAAABAAAAAAANACgAAAABAAEAAAAOACcAAAAAAAAAAAAOACgAAAAAAAEAAAAPACcAAAABAAAAAAAPACgAAAABAAEAAAAQACcAAAAAAAAAAAAQACgAAAAAAAEAAAARACcAAAABAAAAAAARACgAAAABAAEAAAASACcAAAAAAAAAAAASACgAAAAAAAEAAAATACcAAAABAAAAAAATACgAAAABAAEAAAAUACcAAAAAAAAAAAAUACgAAAAAAAEAAAAVACcAAAABAAAAAAAVACgAAAABAAEAAAAWACcAAAAAAAAAAAAWACgAAAAAAAEAAAAXACcAAAABAAAAAAAXACgAAAABAAEAAAAYACcAAAAAAAAAAAAYACgAAAAAAAEAAAAZACcAAAABAAAAAAAZACgAAAABAAEAAAAaACcAAAAAAAAAAAAaACgAAAAAAAEAAAAbACcAAAABAAAAAAAbACgAAAABAAEAAAAcACcAAAAAAAAAAAAcACgAAAAAAAEAAAAdACcAAAABAAAAAAAdACgAAAABAAEAAAAeACcAAAAAAAAAAAAeACgAAAAAAAEAAAAfACcAAAABAAAAAAAfACgAAAABAAEAAAAgACcAAAAAAAAAAAAgACgAAAAAAAEAAAAhACcAAAABAAAAAAAhACgAAAABAAEAAAAiACcAAAAAAAAAAAAiACgAAAAAAAEAAAAjACcAAAABAAAAAAAjACgAAAABAAEAAAAkACcAAAAAAAAAAAAkACgAAAAAAAEAAAAlACcAAAABAAAAAAAlACgAAAABAAEAAAAmACcAAAAAAAAAAAAmACgAAAAAAAEAAAAnACcAAAABAAAAAAAnACgAAAABAAEAAAAoACcAAAAAAAAAAAAoACgAAAAAAAEAAAApACcAAAABAAAAAAApACgAAAABAAEAAAAqACcAAAAAAAAAAAAqACgAAAAAAAEAAAArACcAAAABAAAAAAArACgAAAABAAEAAAAsACcAAAAAAAAAAAAsACgAAAAAAAEAAAAtACcAAAABAAAAAAAtACgAAAABAAEAAAAuACcAAAAAAAAAAAAuACgAAAAAAAEAAAAvACcAAAABAAAAAAAvACgAAAABAAEAAAAwACcAAAAAAAAAAAAwACgAAAAAAAEAAAAxACcAAAABAAAAAAAxACgAAAABAAEAAAAyACcAAAAAAAAAAAAyACgAAAAAAAEAAAAzACcAAAABAAAAAAAzACgAAAABAAEAAAA0ACcAAAAAAAAAAAA0ACgAAAAAAAEAAAA1ACcAAAABAAAAAAA1ACgAAAABAAEAAAA2ACcAAAAAAAAAAAA2ACgAAAAAAAEAAAA3ACcAAAABAAAAAAA3ACgAAAABAAEAAAA4ACcAAAAAAAAAAAA4ACgAAAAAAAEAAAA5ACcAAAABAAAAAAA5ACgAAAABAAEAAAA6ACcAAAAAAAAAAAA6ACgAAAAAAAEAAAA7ACcAAAABAAAAAAA7ACgAAAABAAEAAAA8ACcAAAAAAAAAAAA8ACgAAAAAAAEAAAA9ACcAAAABAAAAAAA9ACgAAAABAAEAAAA+ACcAAAAAAAAAAAA+ACgAAAAAAAEAAAA/ACcAAAABAAAAAAA/ACgAAAABAAEAAABAACcAAAAAAAAAAABAACgAAAAAAAEAAABBACcAAAABAAAAAABBACgAAAABAAEAAABCACcAAAAAAAAAAABCACgAAAAAAAEAAABDACcAAAABAAAAAABDACgAAAABAAEAAABEACcAAAAAAAAAAABEACgAAAAAAAEAAABFACcAAAABAAAAAABFACgAAAABAAEAAABGACcAAAAAAAAAAABGACgAAAAAAAEAAABHACcAAAAAAAEAAABHACgAAAABAAEAAAAAACYAAAABAAEAAAAAACUAAAABAAEAAAAAACQAAAABAAEAAAAAACMAAAABAAEAAAAAACIAAAABAAEAAAAAACEAAAABAAEAAAAAACAAAAABAAEAAAAAAB8AAAABAAEAAAAAAB4AAAABAAEAAAAAAB0AAAABAAEAAAAAABwAAAABAAEAAAAAABsAAAABAAEAAAAAABoAAAABAAEAAAAAABkAAAABAAEAAAAAABgAAAABAAEAAAAAABcAAAABAAEAAAAAABYAAAABAAEAAAAAABUAAAABAAEAAAAAABQAAAABAAEAAAAAABMAAAABAAEAAAAAABIAAAABAAEAAAAAABEAAAABAAEAAAAAABAAAAABAAEAAAAAAA8AAAABAAEAAAAAAA4AAAABAAEAAAAAAA0AAAABAAEAAAAAAAwAAAABAAEAAAAAAAsAAAABAAEAAAAAAAoAAAABAAEAAAAAAAkAAAABAAEAAAAAAAgAAAABAAEAAAAAAAcAAAABAAEAAAAAAAYAAAABAAEAAAAAAAUAAAABAAEAAAAAAAQAAAABAAEAAAAAAAMAAAABAAEAAAAAAAIAAAABAAEAAAAAAAEAAAABAAEAAAAAAAAAAAABAAAAAABHAAAAAAABAAAAAABHAAEAAAABAAEAAABHAAIAAAABAAEAAABHAAMAAAABAAEAAABHAAQAAAABAAEAAABHAAUAAAABAAEAAABHAAYAAAABAAEAAABHAAcAAAABAAEAAABHAAgAAAABAAEAAABHAAkAAAABAAEAAABHAAoAAAABAAEAAABHAAsAAAABAAEAAABHAAwAAAABAAEAAABHAA0AAAABAAEAAABHAA4AAAABAAEAAABHAA8AAAABAAEAAABHABAAAAABAAEAAABHABEAAAABAAEAAABHABIAAAABAAEAAABHABMAAAABAAEAAABHABQAAAABAAEAAABHABUAAAABAAEAAABHABYAAAABAAEAAABHABcAAAABAAEAAABHABgAAAABAAEAAABHABkAAAABAAEAAABHABoAAAABAAEAAABHABsAAAABAAEAAABHABwAAAABAAEAAABHAB0AAAABAAEAAABHAB4AAAABAAEAAABHAB8AAAABAAEAAABHACAAAAABAAEAAABHACEAAAABAAEAAABHACIAAAABAAEAAABHACMAAAABAAEAAABHACQAAAABAAEAAABHACUAAAABAAEAAABHACYAAAABAAEAAAA=")
tile_set = SubResource("TileSet_yts8a")

[node name="player" parent="." instance=ExtResource("2_32bk8")]
position = Vector2(76, 573)

[node name="Camera2D" parent="player" index="2"]
limit_right = 1152
limit_bottom = 657

[node name="enemy" parent="." instance=ExtResource("3_feqwr")]
position = Vector2(629, 576)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wmnol")
autoplay = true

[node name="enemy2" parent="." instance=ExtResource("3_feqwr")]
position = Vector2(859.96, 542.491)
script = ExtResource("7_lp0u0")

[node name="enemy3" parent="." instance=ExtResource("3_feqwr")]
position = Vector2(1046, 581)
script = ExtResource("8_0d487")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-95, -83)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1192, 701)
shape = SubResource("CircleShape2D_qq21g")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(752, 283)
texture = ExtResource("4_r6is4")

[node name="Cake" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1097, 611)
texture = ExtResource("9_85g3d")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]

[editable path="player"]
[editable path="enemy"]
[editable path="enemy2"]
[editable path="enemy3"]
